--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Words Mill</title>
     <script src="http://livejs.com/live.js"></script>
     
     <link href="js/jquery-ui/jquery-ui.min.css" rel="stylesheet">
