html text added

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
           <div class="large-6 medium-6 small-6 columns">
           <p >Total Points: <span class="total-points">0</span></p>
           <div class="points-for-last-turn">
-            <h5>Last Answer</h5>
+            <h5>Last Correct Answer Points</h5>
             <p>Static Columns:<span class="static-column-point"></span></p>
             <p>Letter Moves:<span class="letter-moves"></span></p>
             <p>Letters Used:</p>
