Title of menu change

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 <div class="top-bar" id="main-menu">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Word Mill</li>
+      <li class="menu-text">Word Puppy</li>
     </ul>
   </div>
   <div class="top-bar-right">
