--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Puppy</title>
+    <title>Word Game</title>
     <script src="http://livejs.com/live.js"></script>
     
     <link href="js/jquery-ui/jquery-ui.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div class="top-bar" id="main-menu">
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Word Puppy</li>
+          <li class="menu-text">Word Game</li>
         </ul>
       </div>
       <div class="top-bar-right">
@@ -63,6 +63,8 @@
     <div class="possible-answers-box">
       <p><span class="total-number-of-answers">0</span> possible answers</p>
       <p>Correct answers: <span class="correct-answer-count">0</span></p>
+
+      <ul class="correct-answers"></ul>
       
     </div>
   </div>
