Building medal system

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,11 @@
       </div>
     </div>
     <div class="large-6 medium-6 small-6 columns">
+
+     <div class="total-points-box">
+        <p class="current-medal-text">Current Medal: <span class="current-medal">None</span></p>
+        
+      </div>
       
     </div>
   </div>
