--- a/simpleversion/index.html
+++ b/simpleversion/index.html
@@ -24,7 +24,7 @@
     <button class="record-button">start recording</button>
     <!--       <button id="record-stop">stop recording</button> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/recorderjs/dist/recorder.js"></script>
+    <script src="js/recorder.js"></script>
     <script src="js/audiolib/audiolib.js"></script>
     <script src="js/app.js"></script>
 </body>
