--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
                 </a>
                 <div class ="item-text-container">
                 <h3>
-                    <a href="#">Zaas getNext()</a>
+                    <a href="https://zaaas.io/">Zaaas getNext()</a>
                 </h3>
                 <p>This is a large-scale application to help freelancers be more productive. My contributions include coding most of the authorization/authentication as well as architectural consulting, bug fixes,and cloud service integration. I work closely with the senior architect to incorporate features. The project is in development
                     
@@ -83,7 +83,7 @@
 
                  <div class ="item-text-container">
                 <h3>
-                    <a href="#">JavaScript for Sound Artists</a>
+                    <a href="http://javascriptforsoundartists.com">JavaScript for Sound Artists</a>
                 </h3>
                 <p>JavaScript for Sound Artists is a book I authored to help sound artists learn JavaScript programming at the beginner level. Topics covered include JavaScript, HTML,CSS,JQuery and the Web Audio API. I am also responsible for the cover art concept and website design.</p>
            </div>
@@ -96,7 +96,7 @@
                 </a>
                    <div class ="item-text-container">
                 <h3>
-                    <a href="#">RiffAxelerator</a>
+                    <a href="https://riffaxelerator.com/">RiffAxelerator</a>
                 </h3>
                 <p>This is a React/Redux application that helps users learn to play the guitar. Using the Web Audio API, I wrote code to allow students to record their performances and play them back. The preliminary code for this feature is available <a href="https://github.com/wktdev/redux-sound-recorder">here</a>. In addition to programming I consulted the client on the Web Audio API and JavaScript.
                 </p>
@@ -109,7 +109,7 @@
                 </a>
                  <div class ="item-text-container">
                 <h3>
-                    <a href="#">Five Letter Words (Game)</a>
+                    <a href="http://wktdev.github.io/app/">Five Letter Words (Game)</a>
                 </h3>
                 <p>This is a prototype of a game that I was contracted to code. The game mechanics were provided by the client.
                     The goal of the game is to move the columns and letters around and spell a new word on the center yellow row.The tricky part is that the movement of the letters is constrained. For each correct match, the user is awarded points. 
