--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -149,7 +149,7 @@
                 </a>
                  <div class ="item-text-container">
                 <h3>
-                    <a href="#">Github Profile</a>
+                    <a href="https://github.com/wktdev">Github Profile</a>
                 </h3>
                 <p>The title says it all.</p>
             </div>
