--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,7 +85,7 @@
                 <h3>
                     <a href="http://javascriptforsoundartists.com">JavaScript for Sound Artists</a>
                 </h3>
-                <p>JavaScript for Sound Artists is a book I authored to help sound artists learn JavaScript programming at the beginner level. Topics covered include JavaScript, HTML,CSS,JQuery and the Web Audio API. I am also responsible for the cover art concept and website design.</p>
+                <p>JavaScript for Sound Artists is a book that I wrote to help sound artists learn JavaScript programming at the beginner level. Topics covered include JavaScript, HTML,CSS,JQuery and the Web Audio API. I am also responsible for the cover art concept and website design.</p>
            </div>
             </div>
         </div>
