--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,7 +70,7 @@
                 <h3>
                     <a href="https://zaaas.io/">Zaaas getNext()</a>
                 </h3>
-                <p>This is a large-scale application to help freelancers be more productive. This app is currentLY development and not available to the public.My contributions include coding most of the authorization/authentication as well as architectural consulting, bug fixes,and cloud service integration. I work closely with the senior architect to incorporate features. The project is in development
+                <p>This is a large-scale application to help freelancers be more productive. This app is currently being developed and is not available to the public. My contributions include coding most of the authorization/authentication as well as architectural consulting, bug fixes,and cloud service integration. I work closely with the senior architect to incorporate features. The project is in development
                     
                 </p>
                 </div>
