--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -63,7 +63,7 @@
        
 
             <div class="col-md-6 portfolio-item">
-                <a href="https://zaaas.io/">
+                <a href="/">
                     <img class="img-responsive" src="images/getnext.png" alt="">
                 </a>
                 <div class ="item-text-container">
