--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
                 </a>
                 <div class ="item-text-container">
                 <h3>
-                    <a href="https://zaaas.io/">Zaaas getNext()</a>
+                    Zaaas getNext()
                 </h3>
                 <p>This is a large-scale application to help freelancers be more productive. This app is currently being developed and is not available to the public. My contributions include coding most of the authorization/authentication as well as architectural consulting, bug fixes,and cloud service integration. I work closely with the senior architect to incorporate features. The project is in development
                     
