--- a/jsfsa/index.html
+++ b/jsfsa/index.html
@@ -46,6 +46,26 @@
         <img id="waveform-image" src="images/waveform.png" alt="">
 
         <div class="row">
+                    <div class="code">
+            <code>
+
+
+                var audioContext = new AudioContext();<br>
+
+                var oscillator1 = audioContext.createOscillator();<br>
+                var stereoPanner1 = audioContext.createStereoPanner();<br>
+                stereoPanner1.pan.value = -0.5;<br>
+                oscillator1.connect(stereoPanner);<br>
+                stereoPanner1.connect(audioContext.destination);<br>
+                oscillator1.start(audioContext.currentTime);<br>
+                var oscillator2 = audioContext.createOscillator();<br>
+
+
+
+
+
+          </code>
+        </div>
             <div class="col-md-6">
                 <h1 class="opening-statement">Learn JavaScript the <i>sound</i> way </h1>
                 <p>If you're a musician, DJ, sound performance artist or audio engineer and want to learn the art of programming then you have come to the right place. Here you will learn to code using the worlds most popular programming language while building interactive audio apps.</p>
