updated book link

--- a/jsfsa/index.html
+++ b/jsfsa/index.html
@@ -86,7 +86,7 @@
                            </script>
                        </form>
                        <br> -->
-                    <form action="https://www.amazon.com/JavaScript-Sound-Artists-Learn-Audio/dp/1138961531/ref=sr_1_1?ie=UTF8&qid=1483850669&sr=8-1&keywords=javascript+for+sound" method="GET">
+                    <form action="https://www.amazon.com/JavaScript-Sound-Artists-Learn-Audio-ebook/dp/B0B5FP8M5T" method="GET">
                         <input class="btn get-book-button" type="submit" value="Buy the Book">
                     </form>
                     
