--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                            </script>
                        </form>
                        <br> -->
-                    <form action="https://www.amazon.com/JavaScript-Sound-Artists-Learn-Audio/dp/1138961531/ref=sr_1_1?ie=UTF8&qid=1483850669&sr=8-1&keywords=javascript+for+sound" method="GET">
+                    <form action="https://www.amazon.com/JavaScript-Sound-Artists-William-Turner/dp/103206272X" method="GET">
                         <input class="btn get-book-button" type="submit" value="Buy the Book">
                     </form>
                     
