--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-6">
-                <img class="img-responsive img-rounded" src="images/book_cover.jpg" alt="">
+                <img class="img-responsive img-rounded" src="images/book.jpg" alt="">
             </div>
             <!-- /.col-md-8 -->
         </div>
