--- a/jsfsa/index.html
+++ b/jsfsa/index.html
@@ -101,7 +101,7 @@
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-6">
-                <img class="img-responsive img-rounded" src="images/book_cover.jpg" alt="">
+                <img class="img-responsive img-rounded" src="images/book.png" alt="">
             </div>
             <!-- /.col-md-8 -->
         </div>
